# interaxions

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: unit-test.yaml
.github/workflows/: python-publish.yaml
docs/: README.md  REPOSITORY_STANDARDS.md  XJob_User_Guide.md
examples/: README.md  end_to_end_demo.py  quickstart.py
interactions/: __init__.py
interaxions/: __init__.py  base.py  base_config.py
interaxions/agents/: __init__.py  base_agent.py  models.py
interaxions/agents/swe_agent/: __init__.py  agent.py
interaxions/environments/: base_environment.py
interaxions/environments/swe_bench/: env.py
interaxions/hub/: __init__.py  auto.py  hub_manager.py
interaxions/scaffolds/: base_scaffold.py
interaxions/scaffolds/swe_agent/: __init__.py  agent.py  scaffold.py
interaxions/schemas/: __init__.py  environment.py  job.py  models.py  runtime.py  scaffold.py  task.py  workflow.py
interaxions/tasks/: __init__.py  base_task.py
interaxions/workflows/: __init__.py  base_workflow.py
interaxions/workflows/rollout_and_verify/: config.yaml  workflow.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/fixtures/: sample_data.py
tests/fixtures/mock_repos/test-environment/: config.yaml  ix.py
tests/integration/: __init__.py  test_auto_environment.py  test_auto_scaffold.py  test_auto_task.py  test_auto_workflow.py
tests/unit/: __init__.py  test_base.py  test_config.py  test_hub_manager_checkout.py  test_hub_manager_commit_hash.py  test_models.py  test_schemas.py
(+11 files in other folders)
